manifests/gluu-1.8.34.tgz-manifest.yaml
---
# Source: gluu/charts/oxd-server/templates/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: default
  name: oxd-server-policy
  labels:
    app: oxd-server
    helm.sh/chart: oxd-server-1.8.34
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.5.4"
    app.kubernetes.io/managed-by: Helm
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      app: oxd-server
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: casa
    ports:
    - protocol: TCP
      port: 8443
  - from:
    - podSelector:
        matchLabels:
          app: oxauth
    ports:
    - protocol: TCP
      port: 8443
  - from:
    - namespaceSelector:
        matchLabels:
          app: ingress-kong
    - podSelector:
        matchLabels:
          app: ingress-kong
    ports:
    - protocol: TCP
      port: 8443
---
# Source: gluu/charts/oxauth/templates/service.yml
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: v1
kind: Service
metadata:
  name: oxauth
  namespace: default
  labels:
    APP_NAME: oxauth
    app: oxauth
    helm.sh/chart: oxauth-1.8.34
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.5.4"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - port: 8080
    name: http-oxauth
  selector:
    app: oxauth #oxauth
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
# Source: gluu/charts/oxd-server/templates/service.yaml
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: v1
kind: Service
metadata:
  # the name must match the application
  name: oxd-server
  namespace: default
  labels:
    app: oxd-server
    helm.sh/chart: oxd-server-1.8.34
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.5.4"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 8444
      name: tcp-oxd-server-admin-gui
    - port: 8443
      name: tcp-oxd-server-app-connector
  selector:
    app: oxd-server
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
# Source: gluu/charts/oxtrust/templates/service.yml
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: v1
kind: Service
metadata:
  name: oxtrust
  namespace: default
  labels:
    app: oxtrust
    APP_NAME: oxtrust
    helm.sh/chart: oxtrust-1.8.34
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.5.4"
    app.kubernetes.io/managed-by: Helm
spec:
  clusterIP: None
  ports:
  - port: 8080
    name: http-oxtrust
  selector:
    app: oxtrust
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
# Source: gluu/charts/oxauth/templates/deployment.yml
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-oxauth
  namespace: default
  labels:
    APP_NAME: oxauth
    app: oxauth
    helm.sh/chart: oxauth-1.8.34
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.5.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oxauth
  template:
    metadata:
      labels:
        APP_NAME: oxauth
        app: oxauth
    spec:
      dnsPolicy: ""
      containers:
      - name: oxauth
        imagePullPolicy: IfNotPresent
        image: gluufederation/oxauth:4.5.4-1
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
        ports:
        - name: http-oxauth
          containerPort: 8080
        lifecycle:
          {}        
        volumeMounts:
        
        
          - name: cb-pass
            mountPath: "/etc/gluu/conf/couchbase_password"
            subPath: couchbase_password
          - name: cb-crt 
            mountPath: "/etc/certs/couchbase.crt"
            subPath: couchbase.crt
        livenessProbe:
          exec:
            command:
            - python3
            - /app/scripts/healthcheck.py
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - python3
            - /app/scripts/healthcheck.py
          initialDelaySeconds: 25
          periodSeconds: 25
          timeoutSeconds: 5
        resources: {}
      hostAliases:
      - ip: 22.22.22.22
        hostnames:
        - demoexample.gluu.org
      volumes:
      
      
        - name: cb-pass
          secret:
            secretName: my-release-cb-pass
        - name: cb-crt 
          secret:
            secretName: my-release-cb-crt
---
# Source: gluu/charts/oxd-server/templates/deployment.yaml
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-oxd-server
  namespace: default
  labels:
    app: oxd-server
    helm.sh/chart: oxd-server-1.8.34
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.5.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oxd-server
      release: my-release
  template:
    metadata:
      labels:
        app: oxd-server
        release: my-release
    spec:
      dnsPolicy: ""
      containers:
        - name: oxd-server
          lifecycle:
            {}          
          image: "gluufederation/oxd-server:4.5.4-1"
          securityContext:
            runAsUser: 1000
            runAsNonRoot: true
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8444
            - containerPort: 8443
          livenessProbe:
            exec:
              command:
              - curl
              - -k
              - http://localhost:8080/health-check
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
              - curl
              - -k
              - http://localhost:8080/health-check
            initialDelaySeconds: 25
            periodSeconds: 25
            timeoutSeconds: 5
          volumeMounts:
          
          
            - name: cb-pass
              mountPath: "/etc/gluu/conf/couchbase_password"
              subPath: couchbase_password
            - name: cb-crt
              mountPath: "/etc/certs/couchbase.crt"
              subPath: couchbase.crt
          resources: {}
      volumes:
      
      
        - name: cb-pass
          secret:
            secretName: my-release-cb-pass
        - name: cb-crt
          secret:
            secretName: my-release-cb-crt
      hostAliases:
      - ip: 22.22.22.22
        hostnames:
        - demoexample.gluu.org
---
# Source: gluu/charts/oxtrust/templates/statefulset.yml
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-release-oxtrust
  namespace: default
  labels:
    app: oxtrust
    APP_NAME: oxtrust
    helm.sh/chart: oxtrust-1.8.34
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "4.5.4"
    app.kubernetes.io/managed-by: Helm
spec:
  serviceName: oxtrust
  replicas: 1
  selector:
    matchLabels:
      app: oxtrust
      APP_NAME: oxtrust
  template:
    metadata:
      labels: 
        app: oxtrust
        APP_NAME: oxtrust
    spec:
      dnsPolicy: ""
      containers:
      - name: oxtrust
        lifecycle:
          {}        
        imagePullPolicy: IfNotPresent
        image: gluufederation/oxtrust:4.5.4-1
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
        resources: {}
        ports:
        - name: http-oxtrust
          containerPort: 8080
        volumeMounts:
        
        
          - name: cb-pass
            mountPath: "/etc/gluu/conf/couchbase_password"
            subPath: couchbase_password
          - name: cb-crt
            mountPath: "/etc/certs/couchbase.crt"
            subPath: couchbase.crt
        livenessProbe:
          exec:
            command:
            - python3
            - /app/scripts/healthcheck.py
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - python3
            - /app/scripts/healthcheck.py
          initialDelaySeconds: 25
          periodSeconds: 25
          timeoutSeconds: 5
      volumes:
      
      
        - name: cb-pass
          secret:
            secretName: my-release-cb-pass
        - name: cb-crt 
          secret:
            secretName: my-release-cb-crt
      hostAliases:
      - ip: 22.22.22.22
        hostnames:
        - demoexample.gluu.org
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
# License terms and conditions for Gluu Cloud Native Edition:
# https://www.apache.org/licenses/LICENSE-2.0
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-base
  labels:
    app: my-release-nginx-ingress-oxtrust
  annotations:
    nginx.ingress.kubernetes.io/app-root: "/identity"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "base-route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
               name: oxtrust
               port:
                number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-device-code
  labels:
    app: my-release-nginx-ingress-device-code
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /oxauth/device_authorization.htm
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /device-code
            pathType: Exact
            backend:
              service:
                name: oxauth
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-firebase-messaging
  labels:
    app: my-release-nginx-ingress-firebase-messaging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /oxauth/firebase-messaging-sw.js
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /firebase-messaging-sw.js
            pathType: Exact
            backend:
              service:
                name: oxauth
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-openid-config
  labels: 
    app: my-release-nginx-ingress-oxauth
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /oxauth/.well-known/openid-configuration
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /.well-known/openid-configuration
            pathType: Exact
            backend:
              service:
                name: oxauth
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-uma2-config
  labels: 
    app: my-release-nginx-ingress-oxauth
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /oxauth/restv1/uma2-configuration
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /.well-known/uma2-configuration
            pathType: Exact
            backend:
              service:
                name: oxauth
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-webfinger
  labels: 
    app: my-release-nginx-ingress-oxauth
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /oxauth/.well-known/webfinger
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /.well-known/webfinger
            pathType: Exact
            backend:
              service:
                name: oxauth
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-webdiscovery
  labels: 
    app: my-release-nginx-ingress-oxauth
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /oxauth/.well-known/simple-web-discovery
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /.well-known/simple-web-discovery
            pathType: Exact
            backend:
              service:
                name: oxauth
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-u2f-config
  labels:
    app: my-release-nginx-ingress-oxauth
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /oxauth/restv1/fido-configuration
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /.well-known/fido-configuration
            pathType: Exact
            backend:
              service:
                name: oxauth
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-gluu
  labels: 
    app: my-release-nginx-ingress-oxauth
  annotations:
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout invalid_header http_500 http_502 http_503 http_504"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /oxauth
            pathType: Prefix
            backend:
              service:
                name: oxauth
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-admin-ui
  labels:
    app: my-release-nginx-ingress-oxtrust
  annotations:
    nginx.ingress.kubernetes.io/app-root: "/identity"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "admin-ui-route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout invalid_header http_500 http_502 http_503 http_504"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /identity
            pathType: Prefix
            backend:
              service:
                name: oxtrust
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
---
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
---
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
---
